[FIXED MIFOS:4101,4104,4142,4194 - editing product mix error and layout issues]

--- a/userInterface/src/main/webapp/pages/css/maincss.css
+++ b/userInterface/src/main/webapp/pages/css/maincss.css
@@ -109,7 +109,7 @@ padding-top:5px;
 	text-decoration:none;
 	color:#c6c6c6;
 	font-family: Arial, Verdana, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 9pt;
 	font-weight: bold;
 }
 .lightorange{
